<!--
 * Copyright (c) 2019, Okta, Inc. and/or its affiliates. All rights reserved.
 * The Okta software accompanied by this notice is provided pursuant to the Apache License, Version 2.0 (the "License.")
 *
 * You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0.
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *
 * See the License for the specific language governing permissions and limitations under the License.
-->
<resources>
    <string name="app_name">Okta Android Samples</string>
    <string name="native_sign_in_btn">Native sign-in</string>
    <string name="password_reset">Reset Password</string>
    <string name="password_recover">Recover Password</string>
    <string name="security_question">Security Question</string>
    <string name="native_sign_in_mfa_btn">Native sign-in with MFA</string>
    <string name="password_reset_login_hint">Enter your login</string>
    <string name="password_reset_password_hint">Enter your password</string>
    <string name="password_reset_new_hint">New password</string>
    <string name="password_reset_repeat_hint">Repeat password</string>
    <string name="empty_field_error">Field must not be empty</string>
    <string name="password_not_equal">Passwords don\'t equal</string>
    <string name="answer_title">Answer</string>
    <string name="letter_with_reset_link_success">Letter with reset password link sent on your email: %s</string>
    <string name="letter_with_unlock_account_success">Letter with unlock account link sent</string>
    <string name="password_reset_successfully">You\'ve reset password successfully</string>
    <string name="progress_dialog_message">Please wait! This may take a moment.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out_btn">Sign out</string>
    <string name="init_error">Error during init</string>
    <string name="not_authorized">You aren\'t authorized</string>
    <string name="user_info_loading">Fetching user info</string>
    <string name="access_token_loading">Refreshing access token</string>
    <string name="ending_current_session">Ending current session</string>
    <string name="unable_to_clean_data">Unable to clean data</string>
    <string name="token_refreshed_successfully">Token refreshed successfully</string>
    <string name="error_message">Error</string>
    <string name="refresh_token_btn">Refresh token</string>
    <string name="access_token_btn">Access token</string>
    <string name="id_token_btn">IdToken</string>
    <string name="name_title">Name:</string>
    <string name="locale_title">Locale:</string>
    <string name="zoneinfo_title">Zone Info:</string>
    <string name="get_user_btn">Get User Info</string>
    <string name="user_name_title">Username:</string>
    <string name="clear_data">Clear data</string>
    <string name="logout_btn">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="select_mfa">Select MFA</string>
    <string name="sms_mfa_title">You should receive code via SMS on %s</string>
    <string name="sms_mfa_enter_code_hint">Enter code</string>
    <string name="send_code">Send code</string>
    <string name="verify">Verify</string>
    <string name="remember_device_title">Remember Device</string>
    <string name="not_handle_message">Something unexpected happened. Status: %s</string>
    <string name="mfa_sms_title">SMS Authentication</string>
    <string name="mfa_sms_sent_code">You should receive code via SMS</string>
    <string name="mfa_push_title">Okta Verify</string>
    <string name="mfa_google_authenticator_title">Google Authenticator</string>
    <string name="mfa_push_device">Device %s</string>
    <string name="mfa_google_authenticator_account">Credential ID %s</string>
    <string name="mfa_push_btn">Send Push</string>
    <string name="mfa_push_sent_btn">Push sent!</string>
    <string name="mfa_push_sent">You should receive push on %s</string>
    <string name="mfa_call_sent">You should receive call on %s</string>
    <string name="mfa_call_btn">Call</string>
    <string name="mfa_call_title">Voice Call Authentication</string>
    <string name="mfa_push_reject_title">You have chosen to reject this login.</string>
    <string name="account_lock_out">Your account has been locked</string>
    <string name="unlock_account_message">Are you want to unlock account?</string>
    <string name="unlock_account_title">Unlock account</string>
    <string name="send_email">Send email</string>
    <string name="send_sms">Send SMS</string>
    <string name="email_or_username">Email or Username</string>
    <string name="mfa_require">This action requires MFA. To test this action you can disable MFA in admin panel or implemented MFA verify.</string>
    <string name="have_account">Have an account?</string>
    <string name="welcome_title">Welcome, %s</string>
    <string name="timezone_title">Timezone</string>
    <string name="last_update_title">Last Updated</string>
    <string name="view_tokens_title">View Tokens</string>
    <string name="view_details_title">View Details</string>
    <string name="revoke_tokens">Revoke tokens</string>
    <string name="unable_to_revoke_tokens">Unable to revoke tokens</string>
    <string name="tokens_revoke_success">Tokens revoke successfully</string>

    <string name="select_smartlock_type_title">Select smartlock type</string>
    <string name="select_smartlock_type_message">Please select a way to authenticate</string>
    <string name="fingerprint_type">Fingerprint</string>
    <string name="unlock_screen_type">Unlock Screen</string>
    <string name="unlock_screen_title">Confirm credentials</string>
    <string name="invalid_keys">Invalid keys</string>
    <string name="enable_smart_lock">Enable Smart Lock</string>

    <string name="fingerprint_title">Authenticate</string>
    <string name="fingerprint_failed">Authentication failed.</string>
    <string name="fingerprint_success">Authentication successful!</string>
    <string name="setup_lockscreen_info_msg">Secure lock screen isn\'t set up.\nGo to \'Settings -> Security -> Screenlock\' to set up a lock screen</string>
    <string name="hardware_not_support_fingerprint">Your device does not have a supported fingerprint</string>
    <string name="fingerprint_not_enrolled">You haven\'t enrolled any fingerprints yet.\nGo to \'Settings -> Security to enroll at least one finger</string>
    <string name="fingerprint_alert_title">Confirm fingerprint to continue</string>
    <string name="fingerprint_status">Touch sensor</string>

    <string name="protect_by_smartlock">Protect by SmartLock</string>
    <string name="ask_to_protect_by_smartlock">Do you want to protect data by SmartLock</string>
    <string name="operation_cancel">Operation canceled</string>
</resources>
